// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optic api add git - no cli interaction discover all files in a folder 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$/nested[39m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[33mHint: add \`--history-depth=0\` to backfill the entire history of your API[39m



[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add git - no cli interaction discover all files in repo 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$[39m[22m
[1m[32m✔[39m[22m [1m[34mEmpty[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[33mHint: add \`--history-depth=0\` to backfill the entire history of your API[39m



[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add git - no cli interaction discover all files in repo using --all 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$[39m[22m
[1m[32m✔[39m[22m [1m[34mEmpty[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[33mHint: add \`--history-depth=0\` to backfill the entire history of your API[39m



[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add git - no cli interaction discover one file with history depth 1`] = `
"

[1m[90mAdding API $workspace$/spec.yml[39m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[33mHint: add \`--history-depth=0\` to backfill the entire history of your API[39m



[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add git - no cli interaction discover one file with history depth 2`] = `
"openapi: 3.0.3
x-optic-url: "https://app.useoptic.com/organizations/org-id/apis/api-id"
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /filler_route:
    post:
      operationId: create
      responses:
        "201":
          description: Created successfully
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: string
                    format: uuid
                    example: d5b640e5-d88c-4c17-9bf0-93597b7a1ce2
"
`;

exports[`optic api add no vcs - no cli interaction discover all files in a folder 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$/nested[39m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add no vcs - no cli interaction discover all files in repo 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$[39m[22m
[1m[32m✔[39m[22m [1m[34mEmpty[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add no vcs - no cli interaction discover all files in repo using --all 1`] = `
"

[1m[90mLooking for OpenAPI specs in directory $workspace$[39m[22m
[1m[32m✔[39m[22m [1m[34mEmpty[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add no vcs - no cli interaction discover one file with history depth 1`] = `
"

[1m[90mAdding API $workspace$/spec.yml[39m[22m
[1m[32m✔[39m[22m [1m[34ma spec[39m[22m is now being tracked.
  [1mView: [4mhttps://app.useoptic.com/organizations/org-id/apis/api-id[24m[22m

[34m[1mx-optic-url has been added to newly tracked specs. You should commit these changes.[22m[39m

[34m[1mSetup CI checks by running "optic ci setup"[22m[39m
"
`;

exports[`optic api add no vcs - no cli interaction discover one file with history depth 2`] = `
"openapi: 3.0.3
x-optic-url: "https://app.useoptic.com/organizations/org-id/apis/api-id"
info:
  title: a spec
  description: The API
  version: 0.1.0
paths:
  /filler_route:
    post:
      operationId: create
      responses:
        "201":
          description: Created successfully
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: string
                    format: uuid
                    example: d5b640e5-d88c-4c17-9bf0-93597b7a1ce2
"
`;
